--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
@@ -73,81 +73,8 @@ Lean 4 code:
 \begin{tcolorbox}[colback=white!10, width=\linewidth]
 \begin{lstlisting}[language=Lean4]
 import Mathlib
-syntax "attack" : tactic
-
-macro_rules
-| `(tactic| attack) => `(tactic|
-  first
-  | simp; done
-  | ring; done
-  | ring_nf; rw [Real.sq_sqrt]; ring; all_goals attack; done
-  | nlinarith; done
-  | apply sq_nonneg; all_goals attack; done
-  | apply div_nonneg; all_goals attack; done
-  | field_simp; ring; done
-  | linarith; done
-)
-
-macro "obvious": tactic =>`(tactic|
-  first
-  | attack; done
-  | congr; all_goals attack; done
-  | gcongr; all_goals attack; done
-  | fail "Could not prove this goal automatically. It might not be as obvious as you think!"
-)
-
-macro "in_set" : term => `(true)
-
-
-macro "term_trivial": tactic =>`(tactic|
-  first
-  | simp; done
-  | ring; done
-  | ring_nf; done
-  | linarith; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "old_main_hypothesis": tactic =>`(tactic|
-  first
-  | assumption; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "let_assigned": tactic =>`(tactic|
-  first
-  | dsimp; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "term_equivalence": tactic =>`(tactic|
-  first
-  | simp; done
-  | ring; done
-  | ring_nf; done
-  | linarith; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "comm_ring": tactic =>`(tactic|
-  first
-  | ring; done
-  | ring_nf; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "litnum_reduce": tactic =>`(tactic|
-  first
-  | simp; done
-  | simp [*]; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "litnum_bound": tactic =>`(tactic|
-  first
-  | linarith; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
+import Visored.Obvious
+import Visored.Tactics
 
 def h : ((1:ℕ) + (1:ℕ) : ℕ) = (2:ℕ) := by
   have h1 : ((1:ℕ) + (1:ℕ) : ℕ) = (2:ℕ) := by term_trivial
@@ -185,81 +112,8 @@ Lean 4 code:
 \begin{tcolorbox}[colback=white!10, width=\linewidth]
 \begin{lstlisting}[language=Lean4]
 import Mathlib
-syntax "attack" : tactic
-
-macro_rules
-| `(tactic| attack) => `(tactic|
-  first
-  | simp; done
-  | ring; done
-  | ring_nf; rw [Real.sq_sqrt]; ring; all_goals attack; done
-  | nlinarith; done
-  | apply sq_nonneg; all_goals attack; done
-  | apply div_nonneg; all_goals attack; done
-  | field_simp; ring; done
-  | linarith; done
-)
-
-macro "obvious": tactic =>`(tactic|
-  first
-  | attack; done
-  | congr; all_goals attack; done
-  | gcongr; all_goals attack; done
-  | fail "Could not prove this goal automatically. It might not be as obvious as you think!"
-)
-
-macro "in_set" : term => `(true)
-
-
-macro "term_trivial": tactic =>`(tactic|
-  first
-  | simp; done
-  | ring; done
-  | ring_nf; done
-  | linarith; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "old_main_hypothesis": tactic =>`(tactic|
-  first
-  | assumption; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "let_assigned": tactic =>`(tactic|
-  first
-  | dsimp; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "term_equivalence": tactic =>`(tactic|
-  first
-  | simp; done
-  | ring; done
-  | ring_nf; done
-  | linarith; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "comm_ring": tactic =>`(tactic|
-  first
-  | ring; done
-  | ring_nf; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "litnum_reduce": tactic =>`(tactic|
-  first
-  | simp; done
-  | simp [*]; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "litnum_bound": tactic =>`(tactic|
-  first
-  | linarith; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
+import Visored.Obvious
+import Visored.Tactics
 
 def h (x : ℝ) : (x ^ (2:ℕ) : ℝ) ≥ ((0:ℕ) : ℝ) := by
   have h1 : (x ^ (2:ℕ) : ℝ) ≥ ((0:ℕ) : ℝ) := by
@@ -300,81 +154,8 @@ Lean 4 code:
 \begin{tcolorbox}[colback=white!10, width=\linewidth]
 \begin{lstlisting}[language=Lean4]
 import Mathlib
-syntax "attack" : tactic
-
-macro_rules
-| `(tactic| attack) => `(tactic|
-  first
-  | simp; done
-  | ring; done
-  | ring_nf; rw [Real.sq_sqrt]; ring; all_goals attack; done
-  | nlinarith; done
-  | apply sq_nonneg; all_goals attack; done
-  | apply div_nonneg; all_goals attack; done
-  | field_simp; ring; done
-  | linarith; done
-)
-
-macro "obvious": tactic =>`(tactic|
-  first
-  | attack; done
-  | congr; all_goals attack; done
-  | gcongr; all_goals attack; done
-  | fail "Could not prove this goal automatically. It might not be as obvious as you think!"
-)
-
-macro "in_set" : term => `(true)
-
-
-macro "term_trivial": tactic =>`(tactic|
-  first
-  | simp; done
-  | ring; done
-  | ring_nf; done
-  | linarith; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "old_main_hypothesis": tactic =>`(tactic|
-  first
-  | assumption; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "let_assigned": tactic =>`(tactic|
-  first
-  | dsimp; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "term_equivalence": tactic =>`(tactic|
-  first
-  | simp; done
-  | ring; done
-  | ring_nf; done
-  | linarith; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "comm_ring": tactic =>`(tactic|
-  first
-  | ring; done
-  | ring_nf; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "litnum_reduce": tactic =>`(tactic|
-  first
-  | simp; done
-  | simp [*]; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "litnum_bound": tactic =>`(tactic|
-  first
-  | linarith; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
+import Visored.Obvious
+import Visored.Tactics
 
 def h (a b : ℝ) : (a + b : ℝ) = (b + a : ℝ) := by
   have h1 : (a + b : ℝ) = (b + a : ℝ) := by term_trivial
@@ -418,81 +199,8 @@ Lean 4 code:
 \begin{tcolorbox}[colback=white!10, width=\linewidth]
 \begin{lstlisting}[language=Lean4]
 import Mathlib
-syntax "attack" : tactic
-
-macro_rules
-| `(tactic| attack) => `(tactic|
-  first
-  | simp; done
-  | ring; done
-  | ring_nf; rw [Real.sq_sqrt]; ring; all_goals attack; done
-  | nlinarith; done
-  | apply sq_nonneg; all_goals attack; done
-  | apply div_nonneg; all_goals attack; done
-  | field_simp; ring; done
-  | linarith; done
-)
-
-macro "obvious": tactic =>`(tactic|
-  first
-  | attack; done
-  | congr; all_goals attack; done
-  | gcongr; all_goals attack; done
-  | fail "Could not prove this goal automatically. It might not be as obvious as you think!"
-)
-
-macro "in_set" : term => `(true)
-
-
-macro "term_trivial": tactic =>`(tactic|
-  first
-  | simp; done
-  | ring; done
-  | ring_nf; done
-  | linarith; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "old_main_hypothesis": tactic =>`(tactic|
-  first
-  | assumption; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "let_assigned": tactic =>`(tactic|
-  first
-  | dsimp; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "term_equivalence": tactic =>`(tactic|
-  first
-  | simp; done
-  | ring; done
-  | ring_nf; done
-  | linarith; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "comm_ring": tactic =>`(tactic|
-  first
-  | ring; done
-  | ring_nf; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "litnum_reduce": tactic =>`(tactic|
-  first
-  | simp; done
-  | simp [*]; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "litnum_bound": tactic =>`(tactic|
-  first
-  | linarith; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
+import Visored.Obvious
+import Visored.Tactics
 
 def h (x : ℝ) (h1 : x > ((0:ℕ) : ℝ)) : (x + (((1:ℕ) : ℝ) / x : ℝ) : ℝ) ≥ ((2:ℕ) : ℝ) := by
   have h1 : x > ((0:ℕ) : ℝ) := by old_main_hypothesis
@@ -614,81 +322,8 @@ Lean 4 code:
 \begin{tcolorbox}[colback=white!10, width=\linewidth]
 \begin{lstlisting}[language=Lean4]
 import Mathlib
-syntax "attack" : tactic
-
-macro_rules
-| `(tactic| attack) => `(tactic|
-  first
-  | simp; done
-  | ring; done
-  | ring_nf; rw [Real.sq_sqrt]; ring; all_goals attack; done
-  | nlinarith; done
-  | apply sq_nonneg; all_goals attack; done
-  | apply div_nonneg; all_goals attack; done
-  | field_simp; ring; done
-  | linarith; done
-)
-
-macro "obvious": tactic =>`(tactic|
-  first
-  | attack; done
-  | congr; all_goals attack; done
-  | gcongr; all_goals attack; done
-  | fail "Could not prove this goal automatically. It might not be as obvious as you think!"
-)
-
-macro "in_set" : term => `(true)
-
-
-macro "term_trivial": tactic =>`(tactic|
-  first
-  | simp; done
-  | ring; done
-  | ring_nf; done
-  | linarith; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "old_main_hypothesis": tactic =>`(tactic|
-  first
-  | assumption; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "let_assigned": tactic =>`(tactic|
-  first
-  | dsimp; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "term_equivalence": tactic =>`(tactic|
-  first
-  | simp; done
-  | ring; done
-  | ring_nf; done
-  | linarith; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "comm_ring": tactic =>`(tactic|
-  first
-  | ring; done
-  | ring_nf; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "litnum_reduce": tactic =>`(tactic|
-  first
-  | simp; done
-  | simp [*]; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "litnum_bound": tactic =>`(tactic|
-  first
-  | linarith; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
+import Visored.Obvious
+import Visored.Tactics
 
 def h (x : ℝ) : ((x ^ (2:ℕ) : ℝ) + ((1:ℕ) : ℝ) : ℝ) ≥ ((2:ℕ) * x : ℝ) := by
   first
@@ -735,81 +370,8 @@ Lean 4 code:
 \begin{tcolorbox}[colback=white!10, width=\linewidth]
 \begin{lstlisting}[language=Lean4]
 import Mathlib
-syntax "attack" : tactic
-
-macro_rules
-| `(tactic| attack) => `(tactic|
-  first
-  | simp; done
-  | ring; done
-  | ring_nf; rw [Real.sq_sqrt]; ring; all_goals attack; done
-  | nlinarith; done
-  | apply sq_nonneg; all_goals attack; done
-  | apply div_nonneg; all_goals attack; done
-  | field_simp; ring; done
-  | linarith; done
-)
-
-macro "obvious": tactic =>`(tactic|
-  first
-  | attack; done
-  | congr; all_goals attack; done
-  | gcongr; all_goals attack; done
-  | fail "Could not prove this goal automatically. It might not be as obvious as you think!"
-)
-
-macro "in_set" : term => `(true)
-
-
-macro "term_trivial": tactic =>`(tactic|
-  first
-  | simp; done
-  | ring; done
-  | ring_nf; done
-  | linarith; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "old_main_hypothesis": tactic =>`(tactic|
-  first
-  | assumption; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "let_assigned": tactic =>`(tactic|
-  first
-  | dsimp; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "term_equivalence": tactic =>`(tactic|
-  first
-  | simp; done
-  | ring; done
-  | ring_nf; done
-  | linarith; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "comm_ring": tactic =>`(tactic|
-  first
-  | ring; done
-  | ring_nf; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "litnum_reduce": tactic =>`(tactic|
-  first
-  | simp; done
-  | simp [*]; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "litnum_bound": tactic =>`(tactic|
-  first
-  | linarith; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
+import Visored.Obvious
+import Visored.Tactics
 
 def h (x : ℝ) (h1 : x ≥ ((0:ℕ) : ℝ)) : (x + ((1:ℕ) : ℝ) : ℝ) ≥ ((2:ℕ) * √ x : ℝ) := by
   first
@@ -868,81 +430,8 @@ Lean 4 code:
 \begin{tcolorbox}[colback=white!10, width=\linewidth]
 \begin{lstlisting}[language=Lean4]
 import Mathlib
-syntax "attack" : tactic
-
-macro_rules
-| `(tactic| attack) => `(tactic|
-  first
-  | simp; done
-  | ring; done
-  | ring_nf; rw [Real.sq_sqrt]; ring; all_goals attack; done
-  | nlinarith; done
-  | apply sq_nonneg; all_goals attack; done
-  | apply div_nonneg; all_goals attack; done
-  | field_simp; ring; done
-  | linarith; done
-)
-
-macro "obvious": tactic =>`(tactic|
-  first
-  | attack; done
-  | congr; all_goals attack; done
-  | gcongr; all_goals attack; done
-  | fail "Could not prove this goal automatically. It might not be as obvious as you think!"
-)
-
-macro "in_set" : term => `(true)
-
-
-macro "term_trivial": tactic =>`(tactic|
-  first
-  | simp; done
-  | ring; done
-  | ring_nf; done
-  | linarith; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "old_main_hypothesis": tactic =>`(tactic|
-  first
-  | assumption; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "let_assigned": tactic =>`(tactic|
-  first
-  | dsimp; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "term_equivalence": tactic =>`(tactic|
-  first
-  | simp; done
-  | ring; done
-  | ring_nf; done
-  | linarith; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "comm_ring": tactic =>`(tactic|
-  first
-  | ring; done
-  | ring_nf; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "litnum_reduce": tactic =>`(tactic|
-  first
-  | simp; done
-  | simp [*]; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "litnum_bound": tactic =>`(tactic|
-  first
-  | linarith; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
+import Visored.Obvious
+import Visored.Tactics
 
 def h (x : ℝ) (h1 : x > ((0:ℕ) : ℝ)) (y : ℝ) (h2 : y > ((0:ℕ) : ℝ)) : ((((1:ℕ) : ℝ) / x : ℝ) + (((1:ℕ) : ℝ) / y : ℝ) : ℝ) ≥ (((4:ℕ) : ℝ) / (x + y : ℝ) : ℝ) := by
   have h3 : in_set := by obvious
@@ -1025,81 +514,8 @@ Lean 4 code:
 \begin{tcolorbox}[colback=white!10, width=\linewidth]
 \begin{lstlisting}[language=Lean4]
 import Mathlib
-syntax "attack" : tactic
-
-macro_rules
-| `(tactic| attack) => `(tactic|
-  first
-  | simp; done
-  | ring; done
-  | ring_nf; rw [Real.sq_sqrt]; ring; all_goals attack; done
-  | nlinarith; done
-  | apply sq_nonneg; all_goals attack; done
-  | apply div_nonneg; all_goals attack; done
-  | field_simp; ring; done
-  | linarith; done
-)
-
-macro "obvious": tactic =>`(tactic|
-  first
-  | attack; done
-  | congr; all_goals attack; done
-  | gcongr; all_goals attack; done
-  | fail "Could not prove this goal automatically. It might not be as obvious as you think!"
-)
-
-macro "in_set" : term => `(true)
-
-
-macro "term_trivial": tactic =>`(tactic|
-  first
-  | simp; done
-  | ring; done
-  | ring_nf; done
-  | linarith; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "old_main_hypothesis": tactic =>`(tactic|
-  first
-  | assumption; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "let_assigned": tactic =>`(tactic|
-  first
-  | dsimp; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "term_equivalence": tactic =>`(tactic|
-  first
-  | simp; done
-  | ring; done
-  | ring_nf; done
-  | linarith; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "comm_ring": tactic =>`(tactic|
-  first
-  | ring; done
-  | ring_nf; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "litnum_reduce": tactic =>`(tactic|
-  first
-  | simp; done
-  | simp [*]; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "litnum_bound": tactic =>`(tactic|
-  first
-  | linarith; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
+import Visored.Obvious
+import Visored.Tactics
 
 def h (a b : ℝ) (h1 : a > ((0:ℕ) : ℝ)) (h2 : b > ((0:ℕ) : ℝ)) : ((a / b : ℝ) + (b / a : ℝ) : ℝ) ≥ ((2:ℕ) : ℝ) := by
   have h1 : a > ((0:ℕ) : ℝ) := by old_main_hypothesis
@@ -1243,81 +659,8 @@ Lean 4 code:
 \begin{tcolorbox}[colback=white!10, width=\linewidth]
 \begin{lstlisting}[language=Lean4]
 import Mathlib
-syntax "attack" : tactic
-
-macro_rules
-| `(tactic| attack) => `(tactic|
-  first
-  | simp; done
-  | ring; done
-  | ring_nf; rw [Real.sq_sqrt]; ring; all_goals attack; done
-  | nlinarith; done
-  | apply sq_nonneg; all_goals attack; done
-  | apply div_nonneg; all_goals attack; done
-  | field_simp; ring; done
-  | linarith; done
-)
-
-macro "obvious": tactic =>`(tactic|
-  first
-  | attack; done
-  | congr; all_goals attack; done
-  | gcongr; all_goals attack; done
-  | fail "Could not prove this goal automatically. It might not be as obvious as you think!"
-)
-
-macro "in_set" : term => `(true)
-
-
-macro "term_trivial": tactic =>`(tactic|
-  first
-  | simp; done
-  | ring; done
-  | ring_nf; done
-  | linarith; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "old_main_hypothesis": tactic =>`(tactic|
-  first
-  | assumption; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "let_assigned": tactic =>`(tactic|
-  first
-  | dsimp; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "term_equivalence": tactic =>`(tactic|
-  first
-  | simp; done
-  | ring; done
-  | ring_nf; done
-  | linarith; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "comm_ring": tactic =>`(tactic|
-  first
-  | ring; done
-  | ring_nf; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "litnum_reduce": tactic =>`(tactic|
-  first
-  | simp; done
-  | simp [*]; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
-
-macro "litnum_bound": tactic =>`(tactic|
-  first
-  | linarith; done
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
-)
+import Visored.Obvious
+import Visored.Tactics
 
 def h (x y : ℝ) : ((x ^ (2:ℕ) : ℝ) + (y ^ (2:ℕ) : ℝ) : ℝ) ≥ (((2:ℕ) * x : ℝ) * y : ℝ) := by
   first
