fix lean type ascription fmt, #515

--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
@@ -284,13 +284,13 @@ import Visored.Tactics
 def h (a b c : ℝ) : (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) + (c ^ (2:ℕ) : ℝ) : ℝ) ≥ (((a * b : ℝ) + (b * c : ℝ) : ℝ) + (c * a : ℝ) : ℝ) := by
   first
   | have h1 : ((2:ℕ) * ((((((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) + (c ^ (2:ℕ) : ℝ) : ℝ) - (a * b : ℝ) : ℝ) - (b * c : ℝ) : ℝ) - (c * a : ℝ) : ℝ) : ℝ) = ((((a - b : ℝ) ^ (2:ℕ) : ℝ) + ((b - c : ℝ) ^ (2:ℕ) : ℝ) : ℝ) + ((c - a : ℝ) ^ (2:ℕ) : ℝ) : ℝ) := by calc
-    (2:ℕ) * ((((((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) + (c ^ (2:ℕ) : ℝ) : ℝ) - (a * b : ℝ) : ℝ) - (b * c : ℝ) : ℝ) - (c * a : ℝ) : ℝ) : ℝ = ((((((2:ℕ) * (a ^ (2:ℕ) : ℝ) : ℝ) + ((2:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((2:ℕ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) - (((2:ℕ) * a : ℝ) * b : ℝ) : ℝ) - (((2:ℕ) * b : ℝ) * c : ℝ) : ℝ) - (((2:ℕ) * c : ℝ) * a : ℝ) : ℝ := by obvious
-    _ = ((((a ^ (2:ℕ) : ℝ) - (((2:ℕ) * a : ℝ) * b : ℝ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) + (((b ^ (2:ℕ) : ℝ) - (((2:ℕ) * b : ℝ) * c : ℝ) : ℝ) + (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((c ^ (2:ℕ) : ℝ) - (((2:ℕ) * c : ℝ) * a : ℝ) : ℝ) + (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ := by obvious
-    _ = (((a - b : ℝ) ^ (2:ℕ) : ℝ) + ((b - c : ℝ) ^ (2:ℕ) : ℝ) : ℝ) + ((c - a : ℝ) ^ (2:ℕ) : ℝ) : ℝ := by obvious
+    ((2:ℕ) * ((((((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) + (c ^ (2:ℕ) : ℝ) : ℝ) - (a * b : ℝ) : ℝ) - (b * c : ℝ) : ℝ) - (c * a : ℝ) : ℝ) : ℝ) = (((((((2:ℕ) * (a ^ (2:ℕ) : ℝ) : ℝ) + ((2:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((2:ℕ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) - (((2:ℕ) * a : ℝ) * b : ℝ) : ℝ) - (((2:ℕ) * b : ℝ) * c : ℝ) : ℝ) - (((2:ℕ) * c : ℝ) * a : ℝ) : ℝ) := by obvious
+    _ = (((((a ^ (2:ℕ) : ℝ) - (((2:ℕ) * a : ℝ) * b : ℝ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) + (((b ^ (2:ℕ) : ℝ) - (((2:ℕ) * b : ℝ) * c : ℝ) : ℝ) + (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((c ^ (2:ℕ) : ℝ) - (((2:ℕ) * c : ℝ) * a : ℝ) : ℝ) + (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by obvious
+    _ = ((((a - b : ℝ) ^ (2:ℕ) : ℝ) + ((b - c : ℝ) ^ (2:ℕ) : ℝ) : ℝ) + ((c - a : ℝ) ^ (2:ℕ) : ℝ) : ℝ) := by obvious
   | have h2 : ((((a - b : ℝ) ^ (2:ℕ) : ℝ) + ((b - c : ℝ) ^ (2:ℕ) : ℝ) : ℝ) + ((c - a : ℝ) ^ (2:ℕ) : ℝ) : ℝ) = ((2:ℕ) * ((((((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) + (c ^ (2:ℕ) : ℝ) : ℝ) - (a * b : ℝ) : ℝ) - (b * c : ℝ) : ℝ) - (c * a : ℝ) : ℝ) : ℝ) := by calc
-    (((a - b : ℝ) ^ (2:ℕ) : ℝ) + ((b - c : ℝ) ^ (2:ℕ) : ℝ) : ℝ) + ((c - a : ℝ) ^ (2:ℕ) : ℝ) : ℝ = ((((a ^ (2:ℕ) : ℝ) - (((2:ℕ) * a : ℝ) * b : ℝ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) + (((b ^ (2:ℕ) : ℝ) - (((2:ℕ) * b : ℝ) * c : ℝ) : ℝ) + (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((c ^ (2:ℕ) : ℝ) - (((2:ℕ) * c : ℝ) * a : ℝ) : ℝ) + (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ := by obvious
-    _ = ((((((2:ℕ) * (a ^ (2:ℕ) : ℝ) : ℝ) + ((2:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((2:ℕ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) - (((2:ℕ) * a : ℝ) * b : ℝ) : ℝ) - (((2:ℕ) * b : ℝ) * c : ℝ) : ℝ) - (((2:ℕ) * c : ℝ) * a : ℝ) : ℝ := by obvious
-    _ = (2:ℕ) * ((((((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) + (c ^ (2:ℕ) : ℝ) : ℝ) - (a * b : ℝ) : ℝ) - (b * c : ℝ) : ℝ) - (c * a : ℝ) : ℝ) : ℝ := by obvious
+    ((((a - b : ℝ) ^ (2:ℕ) : ℝ) + ((b - c : ℝ) ^ (2:ℕ) : ℝ) : ℝ) + ((c - a : ℝ) ^ (2:ℕ) : ℝ) : ℝ) = (((((a ^ (2:ℕ) : ℝ) - (((2:ℕ) * a : ℝ) * b : ℝ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) + (((b ^ (2:ℕ) : ℝ) - (((2:ℕ) * b : ℝ) * c : ℝ) : ℝ) + (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((c ^ (2:ℕ) : ℝ) - (((2:ℕ) * c : ℝ) * a : ℝ) : ℝ) + (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by obvious
+    _ = (((((((2:ℕ) * (a ^ (2:ℕ) : ℝ) : ℝ) + ((2:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((2:ℕ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) - (((2:ℕ) * a : ℝ) * b : ℝ) : ℝ) - (((2:ℕ) * b : ℝ) * c : ℝ) : ℝ) - (((2:ℕ) * c : ℝ) * a : ℝ) : ℝ) := by obvious
+    _ = ((2:ℕ) * ((((((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) + (c ^ (2:ℕ) : ℝ) : ℝ) - (a * b : ℝ) : ℝ) - (b * c : ℝ) : ℝ) - (c * a : ℝ) : ℝ) : ℝ) := by obvious
   have h3 : ((((a - b : ℝ) ^ (2:ℕ) : ℝ) + ((b - c : ℝ) ^ (2:ℕ) : ℝ) : ℝ) + ((c - a : ℝ) ^ (2:ℕ) : ℝ) : ℝ) ≥ ((0:ℕ) : ℝ) := by obvious
   have h4 : ((2:ℕ) * ((((((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) + (c ^ (2:ℕ) : ℝ) : ℝ) - (a * b : ℝ) : ℝ) - (b * c : ℝ) : ℝ) - (c * a : ℝ) : ℝ) : ℝ) ≥ ((0:ℕ) : ℝ) := by obvious
   have h5 : ((((((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) + (c ^ (2:ℕ) : ℝ) : ℝ) - (a * b : ℝ) : ℝ) - (b * c : ℝ) : ℝ) - (c * a : ℝ) : ℝ) ≥ ((0:ℕ) : ℝ) := by
@@ -876,18 +876,18 @@ import Visored.Tactics
 def h (x : ℝ) (h1 : x > ((0:ℕ) : ℝ)) : (x + (((1:ℕ) : ℝ) / x : ℝ) : ℝ) ≥ ((2:ℕ) : ℝ) := by
   first
   | have h2 : ((x - ((1:ℕ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ) ≥ ((0:ℕ) : ℝ) := by calc
-    (x - ((1:ℕ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ = ((x ^ (2:ℕ) : ℝ) - ((2:ℕ) * x : ℝ) : ℝ) + ((1:ℕ) : ℝ) : ℝ := by obvious
-    _ ≥ (0:ℕ) : ℝ := by obvious
+    ((x - ((1:ℕ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ) = (((x ^ (2:ℕ) : ℝ) - ((2:ℕ) * x : ℝ) : ℝ) + ((1:ℕ) : ℝ) : ℝ) := by obvious
+    _ ≥ ((0:ℕ) : ℝ) := by obvious
   | have h3 : (((x ^ (2:ℕ) : ℝ) - ((2:ℕ) * x : ℝ) : ℝ) + ((1:ℕ) : ℝ) : ℝ) ≥ ((0:ℕ) : ℝ) := by calc
-    ((x ^ (2:ℕ) : ℝ) - ((2:ℕ) * x : ℝ) : ℝ) + ((1:ℕ) : ℝ) : ℝ = (x - ((1:ℕ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ := by obvious
-    _ ≥ (0:ℕ) : ℝ := by obvious
+    (((x ^ (2:ℕ) : ℝ) - ((2:ℕ) * x : ℝ) : ℝ) + ((1:ℕ) : ℝ) : ℝ) = ((x - ((1:ℕ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ) := by obvious
+    _ ≥ ((0:ℕ) : ℝ) := by obvious
   first
   | have h4 : ((((x ^ (2:ℕ) : ℝ) - ((2:ℕ) * x : ℝ) : ℝ) + ((1:ℕ) : ℝ) : ℝ) / x : ℝ) ≥ ((0:ℕ) : ℝ) := by calc
-    (((x ^ (2:ℕ) : ℝ) - ((2:ℕ) * x : ℝ) : ℝ) + ((1:ℕ) : ℝ) : ℝ) / x : ℝ = (x + (((1:ℕ) : ℝ) / x : ℝ) : ℝ) - ((2:ℕ) : ℝ) : ℝ := by obvious
-    _ ≥ (0:ℕ) : ℝ := by obvious
+    ((((x ^ (2:ℕ) : ℝ) - ((2:ℕ) * x : ℝ) : ℝ) + ((1:ℕ) : ℝ) : ℝ) / x : ℝ) = ((x + (((1:ℕ) : ℝ) / x : ℝ) : ℝ) - ((2:ℕ) : ℝ) : ℝ) := by obvious
+    _ ≥ ((0:ℕ) : ℝ) := by obvious
   | have h5 : ((x + (((1:ℕ) : ℝ) / x : ℝ) : ℝ) - ((2:ℕ) : ℝ) : ℝ) ≥ ((0:ℕ) : ℝ) := by calc
-    (x + (((1:ℕ) : ℝ) / x : ℝ) : ℝ) - ((2:ℕ) : ℝ) : ℝ = (((x ^ (2:ℕ) : ℝ) - ((2:ℕ) * x : ℝ) : ℝ) + ((1:ℕ) : ℝ) : ℝ) / x : ℝ := by obvious
-    _ ≥ (0:ℕ) : ℝ := by obvious
+    ((x + (((1:ℕ) : ℝ) / x : ℝ) : ℝ) - ((2:ℕ) : ℝ) : ℝ) = ((((x ^ (2:ℕ) : ℝ) - ((2:ℕ) * x : ℝ) : ℝ) + ((1:ℕ) : ℝ) : ℝ) / x : ℝ) := by obvious
+    _ ≥ ((0:ℕ) : ℝ) := by obvious
   have h6 : (x + (((1:ℕ) : ℝ) / x : ℝ) : ℝ) ≥ ((2:ℕ) : ℝ) := by obvious
   obvious
 
@@ -937,15 +937,15 @@ import Visored.Tactics
 def h (a b : ℝ) : (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) / ((2:ℕ) : ℝ) : ℝ) ≥ (((a + b : ℝ) / ((2:ℕ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ) := by
   first
   | have h1 : ((((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) / ((2:ℕ) : ℝ) : ℝ) - (((a + b : ℝ) / ((2:ℕ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ) : ℝ) ≥ ((0:ℕ) : ℝ) := by calc
-    (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) / ((2:ℕ) : ℝ) : ℝ) - (((a + b : ℝ) / ((2:ℕ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ) : ℝ = ((((2:ℕ) * (a ^ (2:ℕ) : ℝ) : ℝ) + ((2:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) / ((4:ℕ) : ℝ) : ℝ) - ((((a ^ (2:ℕ) : ℝ) + (((2:ℕ) * a : ℝ) * b : ℝ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) / ((4:ℕ) : ℝ) : ℝ) : ℝ := by obvious
-    _ = (((a ^ (2:ℕ) : ℝ) - (((2:ℕ) * a : ℝ) * b : ℝ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) / ((4:ℕ) : ℝ) : ℝ := by obvious
-    _ = ((a - b : ℝ) ^ (2:ℕ) : ℝ) / ((4:ℕ) : ℝ) : ℝ := by obvious
-    _ ≥ (0:ℕ) : ℝ := by obvious
+    ((((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) / ((2:ℕ) : ℝ) : ℝ) - (((a + b : ℝ) / ((2:ℕ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ) : ℝ) = (((((2:ℕ) * (a ^ (2:ℕ) : ℝ) : ℝ) + ((2:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) / ((4:ℕ) : ℝ) : ℝ) - ((((a ^ (2:ℕ) : ℝ) + (((2:ℕ) * a : ℝ) * b : ℝ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) / ((4:ℕ) : ℝ) : ℝ) : ℝ) := by obvious
+    _ = ((((a ^ (2:ℕ) : ℝ) - (((2:ℕ) * a : ℝ) * b : ℝ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) / ((4:ℕ) : ℝ) : ℝ) := by obvious
+    _ = (((a - b : ℝ) ^ (2:ℕ) : ℝ) / ((4:ℕ) : ℝ) : ℝ) := by obvious
+    _ ≥ ((0:ℕ) : ℝ) := by obvious
   | have h2 : (((a - b : ℝ) ^ (2:ℕ) : ℝ) / ((4:ℕ) : ℝ) : ℝ) ≥ ((0:ℕ) : ℝ) := by calc
-    ((a - b : ℝ) ^ (2:ℕ) : ℝ) / ((4:ℕ) : ℝ) : ℝ = (((a ^ (2:ℕ) : ℝ) - (((2:ℕ) * a : ℝ) * b : ℝ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) / ((4:ℕ) : ℝ) : ℝ := by obvious
-    _ = ((((2:ℕ) * (a ^ (2:ℕ) : ℝ) : ℝ) + ((2:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) / ((4:ℕ) : ℝ) : ℝ) - ((((a ^ (2:ℕ) : ℝ) + (((2:ℕ) * a : ℝ) * b : ℝ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) / ((4:ℕ) : ℝ) : ℝ) : ℝ := by obvious
-    _ = (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) / ((2:ℕ) : ℝ) : ℝ) - (((a + b : ℝ) / ((2:ℕ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ) : ℝ := by obvious
-    _ ≥ (0:ℕ) : ℝ := by obvious
+    (((a - b : ℝ) ^ (2:ℕ) : ℝ) / ((4:ℕ) : ℝ) : ℝ) = ((((a ^ (2:ℕ) : ℝ) - (((2:ℕ) * a : ℝ) * b : ℝ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) / ((4:ℕ) : ℝ) : ℝ) := by obvious
+    _ = (((((2:ℕ) * (a ^ (2:ℕ) : ℝ) : ℝ) + ((2:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) / ((4:ℕ) : ℝ) : ℝ) - ((((a ^ (2:ℕ) : ℝ) + (((2:ℕ) * a : ℝ) * b : ℝ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) / ((4:ℕ) : ℝ) : ℝ) : ℝ) := by obvious
+    _ = ((((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) / ((2:ℕ) : ℝ) : ℝ) - (((a + b : ℝ) / ((2:ℕ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ) : ℝ) := by obvious
+    _ ≥ ((0:ℕ) : ℝ) := by obvious
   have h3 : ((((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) / ((2:ℕ) : ℝ) : ℝ) - (((a + b : ℝ) / ((2:ℕ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ) : ℝ) ≥ ((0:ℕ) : ℝ) := by obvious
   have h4 : (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) / ((2:ℕ) : ℝ) : ℝ) ≥ (((a + b : ℝ) / ((2:ℕ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ) := by
     have d : a = a := by term_derivation_reflection
